@@ -1,5 +1,7 @@
 package de.tototec.sbuild
 
+import de.tototec.sbuild.SchemeHandler.SchemeContext
+
 /**
  * A MapperSchemeHandler will maintain an mapping from on scheme to another scheme.
  */
@@ -8,7 +10,8 @@ class MapperSchemeHandler(
   pathTranslators: Seq[(String, String => String)] = Seq())(implicit project: Project)
     extends SchemeHandler {
 
-  override def localPath(path: String): String =
+  override def localPath(schemeContext: SchemeContext): String = {
+    val path = schemeContext.path
     schemeMapping.find { case (scheme, _) => path.startsWith(scheme + ":") } match {
       case Some((scheme, sourceScheme)) =>
         sourceScheme + path.substring(scheme.size, path.size)
@@ -19,7 +22,7 @@ class MapperSchemeHandler(
           case None =>
             throw new TargetNotFoundException(s"""Cannot find a source scheme handler (mapping or translator) for "${path}".""")
         }
-
     }
+  }
 
 }
